Bug #49615
can't get mdlog when rgw_run_sync_thread = false
% Done:
0%
Source:
Tags:
Backport:
pacific,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
secondary zone can't get mdlog when master zone rgw set rgw_run_sync_thread = false
The reason is master zone rgw skip below
if (run_sync_thread) {
// initialize the log period history
meta_mgr->init_oldest_log_period();
}
History
#1 Updated by Adam Emerson about 1 month ago
- Assignee set to Adam Emerson
#2 Updated by Adam Emerson about 1 month ago
- Status changed from New to Fix Under Review
#3 Updated by Adam Emerson 12 days ago
- Target version changed from v14.2.16 to v17.0.0
- Backport set to pacific,nautilus