rgw: Guard init_oldest_log_period behind nonempty current period

Fixes: https://tracker.ceph.com/issues/49615
Signed-off-by: Adam C. Emerson <aemerson@redhat.com>
(cherry picked from commit b3f41266c5e2529601e12a5496e79c672c42f1ad)
Signed-off-by: Adam C. Emerson <aemerson@redhat.com>